<resources>
    <string name="app_name">NaviApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="begeni">Begeni</string>
    <string name="ziyaret">Ziyaret</string>
    <string name="cevre">Cevre</string>
    <string name="mesaj">Mesaj</string>
    <string name="kesfet">Keşfet</string>
    <string name="profil_foto">Profil Foto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="galeriden_se">Galeriden Seç</string>
    <string name="vazge">Vazgeç</string>
    <string name="kameray_a">kamerayı Aç</string>
    <string name="g_ncelle">Güncelle</string>

</resources>